--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <p>
-    <strong>경고!</strong> 이것은 매우 위험합니다.
-  </p>
-  <p>
-    <em>나는 당근을 사랑합니다. <br>
-        나는 당근을 <em>사랑</em>합니다.
-    </em>
-  </p>
+  <abbr title="Hypertext Markup Language">HTML</abbr>을 배워봅시다.
 </body>
 </html>
