--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <title>Document</title>
 </head>
 <body>
-  <abbr title="Hypertext Markup Language">HTML</abbr>을 배워봅시다.
+  <ul>
+    <li>이틀치 옷</li>
+    <li>세면도구</li>
+    <li>수건</li>
+    <li>학습도구
+      <ul>
+        <li>노트북</li>
+        <li>필기구</li>
+        <li>교재</li>
+      </ul>
+    </li>
+  </ul>
 </body>
 </html>
