--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
   <title>Document</title>
 </head>
 <body>
-  <ul>
-    <li>이틀치 옷</li>
-    <li>세면도구</li>
-    <li>수건</li>
-    <li>학습도구
-      <ul>
-        <li>노트북</li>
-        <li>필기구</li>
-        <li>교재</li>
-      </ul>
-    </li>
-  </ul>
+ <ol>
+  <li>재료 준비</li>
+  <li>파를 기름에 볶기</li>
+  <li>밥 넣고 볶기</li>
+  <li>계란을 넣고 스크램볼</li>
+  <li>간장을 넣고 마저 볶아 완성</li>
+ </ol>
 </body>
 </html>
