--- a/html/index.html
+++ b/html/index.html
@@ -3,15 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://showcases.yalco.kr/html-css/01-06/table.css">
   <title>Document</title>
 </head>
 <body>
- <img
-  src="../images/nathan-dumlao-zEdCT0qrodE-unsplash.jpg" 
-  alt="코딩중인 노트북"
-  title="프로그래밍"
-  width="300"
-  height="300"
-  >
+  <table>
+    <caption>1에서 9까지의 숫자들</caption>
+    <tr>
+      <td>1</td>
+      <td>2</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>5</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>7</td>
+      <td>8</td>
+      <td>9</td>
+    </tr>
+  </table>
 </body>
 </html>
