--- a/html/index.html
+++ b/html/index.html
@@ -7,24 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <table>
-    <caption>1에서 9까지의 숫자들</caption>
-    <tr>
-      <td>1</td>
-      <td>2</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>5</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <td>7</td>
-      <td>8</td>
-      <td>9</td>
-    </tr>
-    
-  </table>
+  <a href="https://www.google.com" target="_blank">구글로 가기</a>
 </body>
 </html>
