--- a/html/index.html
+++ b/html/index.html
@@ -7,21 +7,12 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="./01-result.html" method="get">
-    <label for="name">이름</label>
-    <input id="name" name="my-name" type="text">
-
-    <br><br>
-
-    <label for="age">나이</label>
-    <input id="age" name="my-age" type="number">
-
-    <br><br>
-
-    <button type="submit">제출</button>
-    <button type="reset">초기화</button>
-    <button type="button">버튼</button>
-
-  </form>
+  <textarea 
+    name=""
+    id=""
+    cols="30" rows="10"
+    placeholder="본문을 입력하세요."
+    ></textarea>
+    
 </body>
 </html>
