<select><option> 태그

--- a/html/index.html
+++ b/html/index.html
@@ -7,12 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-  <textarea 
-    name=""
-    id=""
-    cols="30" rows="10"
-    placeholder="본문을 입력하세요."
-    ></textarea>
-    
+  <label for="lang">언어</label> <br> 
+  <select id="lang">
+    <option value="">-- 언어 선택 --</option>
+    <option value="html" selected>HTML</option>
+    <option value="css">CSS</option>
+    <option value="js">자바스크립트</option>
+    <option value="ts">타입스크립트</option>
+  </select>
+
 </body>
 </html>
