--- a/html/index.html
+++ b/html/index.html
@@ -7,13 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <label for="job">현재 직업</label> <br>
-  <input id="job" list="jobs">
-  <datalist id="jobs">
-    <option value="학생">
-    <option value="디자이너">
-    <option value="퍼블리셔">
-    <option value="개발자">
-  </datalist>
+  <iframe 
+    src="https://www.yalco.kr"
+    width="1000" height="600"
+    frameborder="0"></iframe>
 </body>
 </html>
