--- a/index.html
+++ b/index.html
@@ -11,31 +11,10 @@
 </head>
 <body>
 
-  <h1>기본 & 그룹 선택자</h1>
-
-  <span>
-    span 요소
-  </span>
-
-  <p>
-    p 요소
-  </p>
-
-  <p class="blue">
-    p 요소, class는 blue
-  </p>
-
-  <span class="blue">
-    span 요소, class는 blue
-  </span>
-
-  <p class="blue dark">
-    p 요소, class는 blue와 dark
-  </p>
-
-  <p class="blue" id="red">
-    p 요소, class는 blue, id는 red
-  </p>
+  바깥 
+  <div>중간
+    <div>안쪽</div>
+  </div>
   
 </body>
 </html>
