margin과 padding 속성 사용

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 </head>
 <body>
 
-<p>
-  글자와 배경에 색상을 적용해보세요. 
-</p>
-
+<p>margin과 padding은 -top, -bottom</p>
+<p class="special">이를테면 이런 상황에서 유응하죠.</p>
 </body>
 </html>
