--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
 
-<p>margin과 padding은 -top, -bottom</p>
-<p class="special">이를테면 이런 상황에서 유응하죠.</p>
+<div></div>
 </body>
 </html>
