서체와 웹폰트 사용방법

--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
   <link rel="stylesheet" href="../pretty.css">
   <link rel="stylesheet" href="./style.css">
   <title>HTML & CSS 02-01-02</title>
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Hi+Melody&display=swap');
+
+    body {
+      font-family: "Hi Melody", serif; 
+    }
+
+  </style>
+
 </head>
 <body>
-
-<div class="outer">
-  <div class="with-bg"></div>
-</div>
+  <h1>구글폰트의 서제 사용해보기</h1>
+  <p>구글 폰트에서 원하는 한글 서체를 찾아 이 페이지에 적용해보세요!</p>
 </body>
 </html>
