font-family: MyNotoSans, sens-serif

--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
   <title>HTML & CSS 02-01-02</title>
 
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Hi+Melody&display=swap');
-
     body {
-      font-family: "Hi Melody", serif; 
+      padding: 8px 24px;
+      font-size: 1.4rem;
+      font-family: "MyNotoSans", sens-serif; 
     }
 
   </style>
 
 </head>
 <body>
-  <h1>구글폰트의 서제 사용해보기</h1>
-  <p>구글 폰트에서 원하는 한글 서체를 찾아 이 페이지에 적용해보세요!</p>
+    <h1>웹폰트 파일 직접 배포</h1>
+
+    <p>
+      구글 폰트에서 <strong>Noto Sans Korean</strong>채를 다운받아 <br>
+      <i>fonts</i> 폴더를 넣어주세요.
+    </p>
 </body>
 </html>
